package NVocal;

message TAddFriendRequest {
    required string Login = 1;
    required bytes PublicKey = 2;
    required string FriendLogin = 3;
}
